remctl (1.10-1) unstable; urgency=low

  * Run remctl under tcpd and depend on tcpd.
  * Use recommended indentation of Homepage link in long description.
  * Update copyright to my current format, remove the confusing clause
    about export that was removed from the upstream license, and add an
    explicit packaging copyright and license.
  * Update maintainer address.
  * Update standards version to 3.6.2 (no changes required).

 --

remctl (1.9-1) unstable; urgency=high

  * New upstream release.
    - Fix serious bug when including directories of configuration files.

 -- Russ Allbery <rra@stanford.edu>  Tue, 10 May 2005 21:37:12 -0700

remctl (1.8-2) unstable; urgency=low

  * Depend on netbase for update-inetd.

 -- Russ Allbery <rra@stanford.edu>  Tue, 10 May 2005 18:01:01 -0700

remctl (1.8-1) unstable; urgency=low

  * New upstream release.
    - Support include and continuation lines in configuration files.
    - Default configuration file location is now /etc/remctl/remctl.conf.
    - Reduce the syslog noise unless -v is used.
    - Remove the misleading export clause from the license.
  * Add postinst and prerm to add a commented-out invocation of remctld to
    inetd.conf.
  * Install a sample remctl.conf in /etc/remctl that includes all
    fragments in /etc/remctl/conf.d.  Create /etc/remctl/conf.d and
    /etc/remctl/acl for the use of the local administrator.

 -- Russ Allbery <rra@stanford.edu>  Fri,  6 May 2005 08:52:37 -0700

remctl (1.7-2) unstable; urgency=low

  * Uploaded to Debian.  (Closes: #304747)
  * Use the recommended syntax for the homepage link in the description.

 -- Russ Allbery <rra@stanford.edu>  Fri, 15 Apr 2005 00:25:19 -0700

remctl (1.7-1) unstable; urgency=low

  * Initial release.

 -- Russ Allbery <rra@stanford.edu>  Wed, 23 Feb 2005 00:19:37 -0800
