@@ -1,6 +1,8 @@
 remctl (1.10-1) unstable; urgency=low
 
   * Run remctl under tcpd and depend on tcpd.
+  * Use a better method to optionally run make distclean.
+  * Remove unused targets in debian/rules.
   * Use recommended indentation of Homepage link in long description.
   * Update copyright to my current format, remove the confusing clause
     about export that was removed from the upstream license, and add an
